--- a/about.html
+++ b/about.html
@@ -16,6 +16,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
     <script src="https://kit.fontawesome.com/a4df1a361f.js" crossorigin="anonymous"></script>
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" sizes="32x32" href="FAVICON/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="FAVICON/favicon-16x16.png">
+
+    <!-- Apple Touch Icon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="FAVICON/apple-touch-icon.png">
 </head>
 <body>
 
@@ -50,18 +57,16 @@
 
 <main class="about-wrapper">
 
-    <!-- SECTION 1: Hero -->
-    <section class="about-hero">
-        <div class="about-hero-image"
-             style="background-image: url('IMAGES/tasos-hero.jpg');"></div>
+    <!-- NEW SECTION 1: Simple centered intro -->
+    <section class="about-intro">
+        <h1 class="about-title">Tasos Misailidis</h1>
+        <p class="about-subtitle">Bodybuilder • Coach • Judge • Mentor</p>
 
-        <div class="about-hero-text">
-            <h1 class="about-title">Tasos Misailidis</h1>
-            <p class="about-subtitle">Bodybuilder • Coach • Judge • Mentor</p>
-            <p class="about-description">
-                Ένας από τους πιο ενεργούς και πολυδιάστατους ανθρώπους στον χώρο του ελληνικού bodybuilding.
-            </p>
-        </div>
+        <p class="about-description">
+            Ένας από τους πιο ενεργούς και πολυδιάστατους ανθρώπους στον χώρο του ελληνικού bodybuilding.
+            Αθλητής, προπονητής, κριτής αγώνων, διοργανωτής και χορηγός αθλητών — αποτελεί μια από τις πιο
+            σταθερές και επιδραστικές παρουσίες στον χώρο.
+        </p>
     </section>
 
 
@@ -109,23 +114,26 @@
 
 
     <!-- SECTION 4: MuscleClub & Team -->
-    <section class="about-section">
-        <div class="about-text">
-            <h2 class="section-title">MuscleClub & The Battery Team</h2>
-            <p>
-                Ως ιδιοκτήτης του MuscleClub στη Νίκαια μαζί με τον Θανάση Υφαντόπουλο, έχουν δημιουργήσει μια
-                ισχυρή ομάδα πρωταθλητών που υποστηρίζονται πλήρως μέσω της εταιρίας Battery.
-            </p>
-            <p>
-                Υπό την καθοδήγησή τους, οι αθλητές της ομάδας σημειώνουν σταθερά υψηλές διακρίσεις, αποτελώντας
-                μία από τις πιο υπολογίσιμες δυνάμεις στον χώρο του ελληνικού bodybuilding.
-            </p>
-        </div>
+    <section class="about-team">
+        <div class="about-team-inner">
+            <div class="about-team-image">
+                <img src="IMAGES/tasos-team.jpg" alt="Tasos with competition team">
+            </div>
 
-        <div class="about-image">
-            <img src="IMAGES/tasos-team.jpg" alt="Tasos with competition team">
+            <div class="about-team-text">
+                <h2 class="section-title">MuscleClub & The Battery Team</h2>
+                <p>
+                    Ως ιδιοκτήτης του MuscleClub στη Νίκαια μαζί με τον Θανάση Υφαντόπουλο, έχουν δημιουργήσει μια
+                    ισχυρή ομάδα πρωταθλητών που υποστηρίζονται πλήρως μέσω της εταιρίας Battery.
+                </p>
+                <p>
+                    Υπό την καθοδήγησή τους, οι αθλητές της ομάδας σημειώνουν σταθερά υψηλές διακρίσεις, αποτελώντας
+                    μία από τις πιο υπολογίσιμες δυνάμεις στον χώρο του ελληνικού bodybuilding.
+                </p>
+            </div>
         </div>
     </section>
+
 
 
     <!-- SECTION 5: Mission -->
@@ -139,6 +147,7 @@
     </section>
 
 </main>
+
 
 
 <!-- FOOTER -->
