--- a/recipes.html
+++ b/recipes.html
@@ -23,6 +23,13 @@
 
     <!-- Icons -->
     <script src="https://kit.fontawesome.com/a4df1a361f.js" crossorigin="anonymous"></script>
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" sizes="32x32" href="FAVICON/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="FAVICON/favicon-16x16.png">
+
+    <!-- Apple Touch Icon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="FAVICON/apple-touch-icon.png">
 </head>
 <body>
 
